--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     </li>
     <li class="login page">
       <h3 class="title">Welcome to Troper</h3>
+      <p class="subtitle">encrypted webchat by brett henderson</p>
       <div class="form">
         <h3 class="title">Enter Alias</h3>
         <input class="usernameInput" type="text" maxlength="14" />
